deploy/minikube/api/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api
spec:
  rules:
    - http:
        paths:
          - path: /.well-known/
            pathType: Prefix
            backend:
              service:
                name: console-backend
                port:
                  name: endpoint
          - path: /api/keys/
            pathType: Prefix
            backend:
              service:
                name: console-backend
                port:
                  name: endpoint
          - path: /api/admin/
            pathType: Prefix
            backend:
              service:
                name: console-backend
                port:
                  name: endpoint
          - path: /api/registry/
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  name: api
          - path: /api/command/
            pathType: Prefix
            backend:
              service:
                name: command-endpoint
                port:
                  name: endpoint
